Bug 133363 - FILEOPEN DOCX Extra auto spacing in list inside table
Summary: FILEOPEN DOCX Extra auto spacing in list inside table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2020-05-25 09:32 UTC by NISZ LibreOffice Team
Modified: 2023-04-24 07:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer (81.76 KB, image/png)
2020-05-25 09:32 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-05-25 09:32:55 UTC
Created attachment 161253 [details]
Screenshot of the original document side by side in Word and Writer

After bug #133052 was fixed a small problem still remains: in the second row of the table, the “First Line” paragraph (which has its numbering restarted) has unexpected spacing after and the “Second Line” paragraph has unexpected spacing before values of 0.49 cm.

Steps to reproduce:
    1. Open  attachment #160839 [details]

Actual results:
Extra spacing between the first two paragraphs in the A2 cell of the table.

Expected results:
No spacing between the two paragraphs.

LibreOffice details:
Version: 7.0.0.0.alpha1+ (x64)
Build ID: 21875558f6c478f07d68ff39e025d7ffd451674f
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 Xisco Faulí 2020-05-25 15:45:02 UTC
Reproduced in

Version: 7.0.0.0.alpha1+
Build ID: 82894d85147840f1f587e9530b12f0058f2ef2c3
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

in previous versions all the items in the numbering list has extra spacing
Comment 2 Xisco Faulí 2020-07-22 10:07:59 UTC
Still reproducible in

Version: 7.1.0.0.alpha0+
Build ID: b877b9bc894892e61f0d6311729f7b01139923d6
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 NISZ LibreOffice Team 2021-07-12 13:53:38 UTC
Still happens in:

Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 0fc020fb73c86a20608e8dff12af607e60327379
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 4 Commit Notification 2023-04-21 08:54:06 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e6a08aa351815b7be3bd094320c589026582454b

tdf#133363 sw DOCX import: remove extra auto space in mixed list

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2023-04-24 07:36:25 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 006b35d50024b1932d84380b5d2fec1f7066bccd
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded