tdf#133363 sw DOCX import: remove extra auto space in mixed list

Remove extra auto space even for mixed list styles. For mixed
style lists, it has not removed all the extra space needed.

See also commit 9cca15204af9cc44a8a9528ccf2f36616fb70e69
"tdf#133052: DOCX import: fix top auto margin of subitems".

Change-Id: I15e58616d5810ea57ac9339bdd8e4b5859f09c81
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150313
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>